force-app/main/default/objects/Consultant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dhaka</fullName>
            </value>
            <value>
                <fullName>Chittagong</fullName>
            </value>
            <value>
                <fullName>Rajshahi</fullName>
            </value>
            <value>
                <fullName>Rangpur</fullName>
            </value>
            <value>
                <fullName>Khulna</fullName>
            </value>
            <value>
                <fullName>Sylhet</fullName>
            </value>
            <value>
                <fullName>Barisal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>