force-app/main/default/objects/Consultant__c/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <label>Consultant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>