force-app/main/default/objects/Consultant__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dhaka</fullName>
            </value>
            <value>
                <fullName>Chittagong</fullName>
            </value>
            <value>
                <fullName>Barisal</fullName>
            </value>
            <value>
                <fullName>Rajhsahi</fullName>
            </value>
            <value>
                <fullName>Sylhet</fullName>
            </value>
            <value>
                <fullName>Rangpur</fullName>
            </value>
            <value>
                <fullName>Khulna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>