force-app/main/default/objects/Consultant__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>Consultants</relationshipLabel>
    <relationshipName>Supervisors</relationshipName>
    <type>Lookup</type>
</CustomField>